<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="8"
    android:background="@color/colorPrimary"
    android:padding="8dp"
    >
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_two_euros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/two_euro"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_one_euro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/one_euro"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_fifty_cent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/fifty_cent"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_twenty_cent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/twenty_cent"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_ten_cent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/ten_cent"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_five_cent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/five_cent"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_two_cent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/two_cent"/>
    <fr.vbastien.mycoincollector.util.view.SimpleCoinView
        android:id="@+id/ui_tv_one_cent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:coin_facial_value="@string/one_cent"/>
</LinearLayout>