<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ui_cl_cointainer"
    tools:context="fr.vbastien.mycoincollector.controller.coin.CoinAddActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ui_al_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/ui_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.ToolBarStyle" />

    </android.support.design.widget.AppBarLayout>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/ui_pb_loading"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:indeterminate="true"
        app:layout_anchor="@id/ui_al_layout"
        app:layout_anchorGravity="bottom"
        app:mpb_progressStyle="horizontal" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ui_ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_name" />

            <Spinner
                android:id="@+id/ui_sp_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <fr.vbastien.mycoincollector.util.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:helperText="@string/coin_value_helper"
                app:helperTextColor="@color/material_grey_400">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ui_et_coin_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/coin_value"
                    android:inputType="phone"
                    android:digits="@string/decimal_number_digits"/>
            </fr.vbastien.mycoincollector.util.CustomTextInputLayout>

            <fr.vbastien.mycoincollector.util.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:helperText="@string/coin_description_helper"
                app:helperTextColor="@color/material_grey_400">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ui_et_coin_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </fr.vbastien.mycoincollector.util.CustomTextInputLayout>

            <LinearLayout
                android:id="@+id/ui_ll_coin_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/material_grey_200"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/camera"
                    android:tint="@color/material_grey_400" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_photo"
                    android:textAllCaps="true"
                    android:textColor="@color/material_grey_400" />
            </LinearLayout>
            <fr.vbastien.mycoincollector.util.SquareImageView
                android:id="@+id/ui_iv_coin_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/ui_bt_add_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_coin_text"
                android:theme="@style/AppTheme.RaisedButton"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
