<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ui_cl_container"
    tools:context="fr.vbastien.mycoincollector.controller.splashscreen.SplashScreenActivity"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="@dimen/material_component_bottom_sheet_edge_left_right_margins"
        android:layout_marginRight="@dimen/material_component_bottom_sheet_edge_left_right_margins"
        android:layout_marginStart="@dimen/material_component_bottom_sheet_edge_left_right_margins"
        android:layout_marginEnd="@dimen/material_component_bottom_sheet_edge_left_right_margins"
        android:layout_marginBottom="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
        android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_top_bottom_margins">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/material_light_white"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_short_explanation"
            android:layout_marginTop="@dimen/material_layout_vertical_spacing_subtitle"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/material_light_white"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_marginTop="@dimen/material_layout_vertical_spacing_subtitle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/coin"/>
        <TextView
            android:layout_marginTop="@dimen/material_layout_vertical_spacing_subtitle"
            android:id="@+id/ui_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_in_progress"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/material_light_white"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
